--- a/Intro_to_Colab.ipynb
+++ b/Intro_to_Colab.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMVlFObr++WSC+X3XGOuqQs",
+      "authorship_tag": "ABX9TyPx/UrAAR7vDLz45j5C0npf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -30,13 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "sE1L5Wf0obwO"
       },
       "outputs": [],
       "source": [
-        "import torch"
+        "import torch\n",
+        "import numpy as np"
       ]
     },
     {
@@ -49,9 +48,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ybwyWIpOovSB",
-        "outputId": "071d0ad2-7dbc-4d66-c234-616f6751eaf3"
+        "outputId": "071d0ad2-7dbc-4d66-c234-616f6751eaf3",
+        "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,10 +555,151 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Lists"
+      ],
+      "metadata": {
+        "id": "ZOrkwxbcxP-Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [[1, 2, 3], [6, 7, 8]]\n",
+        "my_list"
+      ],
+      "metadata": {
+        "id": "VqoKRwv7p8Co",
+        "outputId": "2a891521-ea13-4f98-e6c4-d25922bd9782",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3], [6, 7, 8]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Numpy arrays"
+      ],
+      "metadata": {
+        "id": "1emgEuVCxfpT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np1 = np.random.rand(3, 4)\n",
+        "np1"
+      ],
+      "metadata": {
+        "id": "JXD98X0oxeOW",
+        "outputId": "c2cfca1e-0c19-4c3a-f916-669c8a52188d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.59870298, 0.08437971, 0.58866233, 0.27195221],\n",
+              "       [0.80107394, 0.08157736, 0.39474009, 0.87862611],\n",
+              "       [0.51738491, 0.76607525, 0.09538799, 0.11239736]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tensors"
+      ],
+      "metadata": {
+        "id": "CaxU1__sxxr-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_2d = torch.randn(3, 4)\n",
+        "tensor_2d\n",
+        "tensor_2d.dtype"
+      ],
+      "metadata": {
+        "id": "vH0JnjHmxmML",
+        "outputId": "b4549680-4955-4b6e-cb74-391c5fb2434c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create tensor out of numpy array\n",
+        "my_tensor = torch.tensor(np1)\n",
+        "my_tensor"
+      ],
+      "metadata": {
+        "id": "h36kTBSVx4VI",
+        "outputId": "31c42300-7770-4cd2-a980-b913be88c040",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5987, 0.0844, 0.5887, 0.2720],\n",
+              "        [0.8011, 0.0816, 0.3947, 0.8786],\n",
+              "        [0.5174, 0.7661, 0.0954, 0.1124]], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "VqoKRwv7p8Co"
+        "id": "pIB74gSHzVqz"
       },
       "execution_count": null,
       "outputs": []
